# genbu

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  example.py  infer_parser.py  pyproject.toml  requirements.txt  scripts.py  setup.py  test_infer_parser.py
.github/workflows/: python-package-3.6.yml  python-package.yml
climates/: __init__.py  conftest.py  parameters.py  test_climates.py
examples/: add.py  cat.py  echo.py  ellipsis.py  hello.py  routes.py  simple.py
genbu/: __init__.py  cli.py  combinators.py  exceptions.py  forward.py  infer.py  infer_params.py  namespace.py  normalize.py  params.py  shell_parser.py  usage.py
genbu/cli/: __init__.py  forward.py  normalize.py  renamer.py
infer-parser/: .dockerignore  .gitignore  Dockerfile  LICENSE  setup.py
infer-parser/infer_parser/: _parsers.py
infer-parser/tests/: strategies.py
infer_parser/: __init__.py  _parsers.py  test_infer_parser.py
tests/: strategies.py  test_cli.py  test_combinators.py  test_genbu.py  test_infer.py  test_infer_params.py  test_infer_parser.py  test_params.py  test_usage.py
tortoise/: __init__.py  cli.py  combinators.py  commons.py  exceptions.py  forward.py  params.py  read.py  reader.py  shell_parser.py  subcommands.py  usage.py
tortoise/combinators/: __init__.py  expressions.py
